    new array subtypes UNSIGNED-BYTE 7, 15, 29, and 31 mandated by 
    obscure ANSI requirements

changes in sbcl-0.8.4 relative to sbcl-0.8.3:
  * fixed compiler performance when processing loops with a step >1;
  * bug fix: DOCUMENTATION now retrieves generic function
    documentation.  Also, DOCUMENTATION and (SETF DOCUMENTATION)
    support has been systematized, and now supports the methods
    specified by ANSI, along with a default method and a method for
    slot documentation.  (reported by Nathan Froyd)
  * bug fix: effective methods associated with a generic function are
    no longer cached over a change of that generic function's method
    combination.  (reported by Andreas Fuchs)
  * optimization: restored some effective method precomputation in
    CLOS (turned off by an ANSI fix in sbcl-0.8.3); the amount of
    precomputation is now tunable.
  * optimization: compiler-internal data structure use has been
    reviewed, and changes have been made that should improve the
    performance of the compiler by about 20%.
  * bug fix: in some situations compiler did not report usage of
    generic arithmetic in (SPEED 3) policy.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.