@@ -1124,6 +1124,7 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
              "KEY-INFO" "KEY-INFO-NAME"
              "KEY-INFO-P" "KEY-INFO-TYPE"
              "LAYOUT-DEPTHOID" "LAYOUT-INVALID-ERROR"
+	     #!+x86 "%LEA"
 	     "LEXENV" "LEXENV-DESIGNATOR"
              "LINE-LENGTH"
              "ANSI-STREAM"
